--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                         <h2 class="section-title">Let’s discuss about you  Coding project</h2>
                     </div>
                     <div class="left-text">
-                        <p> We will help you  to sharpen your coding skills , Our team contains C++/HTML/CSS/PYTHON Expert- ADITYA KUMAR, SAIMA SABA JAWAID</p>
+                        <p> We will help you  to sharpen your coding skills , Our team contains C++/HTML/CSS/PYTHON Expert- ADITYA KUMAR,</p>
                     </div>
                 </div>
             </div>
