--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
 
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 
-    <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
+    <link rel="stylesheet" href="assets/css/decoders.css">
 
     </head>
     
