--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
                         <h1> We provide <strong>strategies</strong><br>to grow up your <strong> Coding Skills</strong></h1>
-                        <p>On Decoders we Make coding supereasy!!!!! 
+                        <p>On Decoders we make coding supereasy!!!!! 
                     </p>
                         <a href="#features" class="main-button-slider">Discover More</a>
                     </div>
@@ -128,7 +128,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Ultimate Coding Projects</h5>
-                                <p>Hi       HI hi hi  hhhhhhhhhhhhhhhhhhh     gggggggggv hhhhhhhhhh hhhhhhhh </p>
+                                <p>We will help you in making real life problem solving projects.  </p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -149,10 +149,10 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Let’s discuss about you  Coding project</h2>
+                        <h2 class="section-title">Discussion/Ideas about effective and efficent coding techniques.</h2>
                     </div>
                     <div class="left-text">
-                        <p> We will help you  to sharpen your coding skills , Our team contains C++/HTML/CSS/PYTHON Expert- ADITYA KUMAR,</p>
+                        <p> We will help you to sharpen your coding skills,Our team contains experts in computer language who will help you in building a strong base in many languages (ADITYA KUMAR)|Full stack Developer|,</p>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                         <h2 class="section-title">We can help you to grow your Coding Skills</h2>
                     </div>
                     <div class="left-text">
-                        <p> Coding skills    jh Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, accusamus vero iure sint laudantium rerum veniam aut aspernatur deserunt mollitia, cumque perspiciatis, nihil magni. Sapiente?.</p>
+                        <p> Coding skills Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, accusamus vero iure sint laudantium rerum veniam aut aspernatur deserunt mollitia, cumque perspiciatis, nihil magni. Sapiente?.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
