--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                                 <div class="icon">
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
-                                <h5 class="features-title">Modern Strategy</h5>
-                                <p>C</p>
+                                <h5 class="features-title">Fast Track Cources</h5>
+                                <p>Brush up your skills or learn from scratch. Increase your pace of learning & even get certified with our to the point byte size fast track courses around 6 most important topics such as data structures and algorithms programming dynamic programming etc</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -116,7 +116,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Best Relationship With You</h5>
-                                <p>Contact us immediately if you have a question in mind , We will provide 24/7 support</p>
+                                <p>Contact us immediately if you have a question in mind, We provide 24/7 support</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -128,7 +128,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Ultimate Coding Projects</h5>
-                                <p>We will help you in making real life problem solving projects.  </p>
+                                <p>Take your coding skills to the next level with completely free and real time mock projects.Expert selected questions as per your unique coding requirements. </p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -138,8 +138,6 @@ contact me at yoyo1adityasingh@gmail.com for any edits
         </div>
     </section>
     <!-- ***** Features Small End ***** -->
-
-    <!-- ***** Features Big Item Start ***** -->
     <section class="section padding-top-70 padding-bottom-0" id="features">
         <div class="container">
             <div class="row">
