--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                         <h2 class="section-title">We can help you to grow your Coding Skills</h2>
                     </div>
                     <div class="left-text">
-                        <p> Coding skills Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, accusamus vero iure sint laudantium rerum veniam aut aspernatur deserunt mollitia, cumque perspiciatis, nihil magni. Sapiente?.</p>
+                        <p> Confused on which course to take? I have got you covered. Browse courses and find out the best course for you. Its free! Decoders is my attempt to teach basics and those coding techniques to people in short time which took me ages to learn.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -191,8 +191,8 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                 <div class="row">
                     <div class="offset-lg-3 col-lg-6">
                         <div class="info">
-                            <h1>Work Process</h1>
-                            <p>Aenean nec tempor metus. Maecenas ligula dolor, commodo in imperdiet interdum, vehicula ut ex. Donec ante diam.</p>
+                            <h1>Recommended Courses</h1>
+                            <p>, </p>
                         </div>
                     </div>
                 </div>
@@ -202,43 +202,43 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Get Ideas</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>C/C++</strong>
+                            <span></span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Sketch Up</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>HTML</strong>
+                            <span></span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Discuss</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>CSS</strong>
+                            <span></span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Revise</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>JAVASCRIPT</strong>
+                            <span></span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Approve</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>Node.Js</strong>
+                            <span>span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Launch</strong>
-                            <span>Godard pabst prism fam cliche.</span>
+                            <strong>PYTHON</strong>
+                            <span></span>
                         </a>
                     </div>
                 </div>
@@ -255,12 +255,12 @@ contact me at yoyo1adityasingh@gmail.com for any edits
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">What do they say?</h2>
+                        <h2 class="section-title">WHAT YOU WILL LEARN!</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Donec tempus, sem non rutrum imperdiet, lectus orci fringilla nulla, at accumsan elit eros a turpis. Ut sagittis lectus libero.</p>
+                        <p>Create a responsive website using HTML to structure content, CSS to handle visual style, and JavaScript to develop interactive experiences</p>
                     </div>
                 </div>
             </div>
@@ -291,7 +291,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                     <div class="team-item">
                         <div class="team-content">
                             <i><img src="assets/images/testimonial-icon.png" alt=""></i>
-                            <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
+                            <p></p>
                             <div class="user-image">
                                 <!-- Saima Image 60*60-->
                                 <img src="http://placehold.it/60x60" alt="">
@@ -310,7 +310,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                     <div class="team-item">
                         <div class="team-content">
                             <i><img src="assets/images/testimonial-icon.png" alt=""></i>
-                            <p>Quisque diam odio, maximus ac consectetur eu, auctor non lorem. Cras quis est non ante ultrices molestie. Ut vehicula et diam at aliquam.</p>
+                            <p></p>
                             <div class="user-image">
                                 <img src="http://placehold.it/60x60" alt="">
                             </div>
@@ -339,7 +339,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis arcu elementum, quis congue risus volutpat.</p>
+                        <p>Apply your skills with hands-on projects and build a portfolio that showcases your job readiness to potential employers. You'll need to successfully finish the project(s) to earn your Certificate</p>
                     </div>
                 </div>
             </div>
@@ -482,7 +482,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
+                        <p>Take free online coding courses to build your skills and advance your career as a programmer. Learn to code with computer coding classes for web development, programming and computer science,  and much more from top universities and institutions.</p>
                     </div>
                 </div>
             </div>
