--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ contact me at yoyo1adityasingh@gmail.com for any edits
             <div class="container">
                 <div class="row">
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
-                        <h1> We provide <strong>strategies</strong><br>to grow up your <strong> Coding Skills</strong></h1>
+                        <h1> Welcome to our coding education website! Here, you'll find a variety of resources and tools to help you learn how to code. Whether you're a complete beginner or an experienced developer looking to expand your skills, we've got you covered.</strong></h1>
                         <p>On Decoders we make coding supereasy!!!!! 
                     </p>
                         <a href="#features" class="main-button-slider">Discover More</a>
@@ -147,10 +147,10 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Discussion/Ideas about effective and efficent coding techniques.</h2>
+                        <h2 class="section-title">Why Learn to Code?</h2>
                     </div>
                     <div class="left-text">
-                        <p> We will help you to sharpen your coding skills,Our team contains experts in computer language who will help you in building a strong base in many languages (ADITYA KUMAR)|Full stack Developer|,</p>
+                        <p> Coding is an essential skill in today's digital world. It powers everything from websites and mobile apps to software and hardware. Learning to code can open up a world of opportunities, from starting your own business to landing a high-paying job in the tech industry.</p>
                     </div>
                 </div>
             </div>
@@ -169,10 +169,14 @@ contact me at yoyo1adityasingh@gmail.com for any edits
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">We can help you to grow your Coding Skills</h2>
+                        <h2 class="section-title">Getting Started with Coding</h2>
                     </div>
                     <div class="left-text">
-                        <p> Confused on which course to take? I have got you covered. Browse courses and find out the best course for you. Its free! Decoders is my attempt to teach basics and those coding techniques to people in short time which took me ages to learn.</p>
+                        <p>If you're new to coding, don't worry. We have plenty of resources to help you get started. We recommend starting with our beginner's guide to programming, which covers the basics of programming concepts and terminology.
+
+From there, you can explore different programming languages like HTML, CSS, and JavaScript. We offer tutorials and courses for each of these languages, so you can learn at your own pace.
+
+If you're interested in mobile app development, we recommend checking out our courses on iOS and Android app development. These courses will teach you how to build mobile apps from scratch using popular development tools like Xcode and Android Studio </p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -477,12 +481,12 @@ contact me at yoyo1adityasingh@gmail.com for any edits
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">Blog Entries</h2>
+                        <h2 class="section-title">Advanced Topics</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>Take free online coding courses to build your skills and advance your career as a programmer. Learn to code with computer coding classes for web development, programming and computer science,  and much more from top universities and institutions.</p>
+                        <p>For experienced developers looking to expand their skills, we offer courses on more advanced topics like machine learning, artificial intelligence, and blockchain development. These courses will help you stay on top of the latest trends and technologies in the industry.</p>
                     </div>
                 </div>
             </div>
@@ -496,10 +500,10 @@ contact me at yoyo1adityasingh@gmail.com for any edits
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="#">Vivamus ac vehicula dui</a>
+                                <a href="#">Community Support</a>
                             </h3>
                             <div class="text">
-                               Cras aliquet ligula dui, vitae fermentum velit tincidunt id. Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas augue.
+                               Learning to code can be challenging, but you don't have to do it alone. Our website features a community forum where you can connect with other learners, ask questions, and share your experiences
                             </div>
                             <a href="#" class="main-button">Read More</a>
                         </div>
